Fix Bug and Add Word Wrap
This commit fixes a bug that occurs when the user clicks a number, an operator, and then enter. It used to freeze so that nothing could be done after. Now, it prevents you from clicking enter until a second number is placed. Word wrap was also added to allow any amount of numbers to fit on the screen.

--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,12 @@ body {
     justify-content: space-between;
     background-color: #292c2c;
     width: 251px;
-    height: 50px;
+    min-height: 50px;
     padding: 4px;
     margin-bottom: 3px;
     border-radius: 0.2em;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 #topScreen, #screen {
